--- a/schedule.html
+++ b/schedule.html
@@ -47,10 +47,11 @@
     main {
       flex: 1;
       padding: 0;
-      margin: ;
+      margin: audo;
       background: white;
       display: flex;
       flex-direction: column;
+      padding: 2rem; 
     }
 
     iframe {
